kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cotoagent
  labels:
    name: cotoagent
