kube/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotoagent-dep
  namespace: cotoagent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cotoagent-api

  template:
    metadata:
      labels:
        app: cotoagent-api
    spec:
      containers:
      - name: cotoagent-container
        image: derpipose/cotoagent-api:$CONTAINER_VERSION
        ports:
        - containerPort: 4000
