kube/database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cotoagent-db-svc
  namespace: cotoagent
spec:
  selector:
    app: cotoagent-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
