kube/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cotoagent-frontend-ingress
  namespace: cotoagent
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cotoagent.duckdns.org
    secretName: cotoagent-tls
  rules:
    - host: cotoagent.duckdns.org
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: cotoagent-api-svc
              port:
                number: 4000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cotoagent-frontend-svc
              port:
                number: 80
